# back/auth/docs/swagger.yaml
@@ -1,14 +1,23 @@
 basePath: /auth/v1
 definitions:
-  httpserver.authorizeRequest:
+  httpserver.loginRequest:
     properties:
       login:
         type: string
       password:
         type: string
     type: object
+  httpserver.logoutRequest:
+    properties:
+      access:
+        type: string
+      refresh:
+        type: string
+    type: object
   httpserver.refreshRequest:
     properties:
+      access:
+        type: string
       refresh:
         type: string
     type: object
@@ -33,11 +42,11 @@ info:
   title: BRM API
   version: "1.0"
 paths:
-  /authorize:
+  /login:
     post:
       consumes:
       - application/json
-      description: Получает access и refresh-токены, используя авторизацию по логину
+      description: Получает access и refresh-токены, используя аутентификацию по логину
         и паролю
       parameters:
       - description: Логин и пароль
@@ -45,7 +54,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/httpserver.authorizeRequest'
+          $ref: '#/definitions/httpserver.loginRequest'
       produces:
       - application/json
       responses:
@@ -62,13 +71,41 @@ paths:
           schema:
             $ref: '#/definitions/httpserver.tokensResponse'
       summary: Получение токенов
+  /logout:
+    post:
+      consumes:
+      - application/json
+      description: Удаляет пару токенов
+      parameters:
+      - description: Пара токенов
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/httpserver.logoutRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешный выход из аккаунта
+          schema:
+            $ref: '#/definitions/httpserver.tokensResponse'
+        "400":
+          description: Неверный формат входных данных
+          schema:
+            $ref: '#/definitions/httpserver.tokensResponse'
+        "500":
+          description: Проблемы на стороне сервера
+          schema:
+            $ref: '#/definitions/httpserver.tokensResponse'
+      summary: Выход из аккаунта
   /refresh:
     post:
       consumes:
       - application/json
       description: Обновляет access и refresh-токены, старая пара становится непригодной
       parameters:
-      - description: Refresh-токен
+      - description: Пара токенов
         in: body
         name: input
         required: true
