# back/auth/internal/ports/httpserver/presenters.go
@@ -1,10 +1,16 @@
 package httpserver
 
 type refreshRequest struct {
+	Access  string `json:"access"`
 	Refresh string `json:"refresh"`
 }
 
-type authorizeRequest struct {
+type loginRequest struct {
 	Login    string `json:"login"`
 	Password string `json:"password"`
+}
+
+type logoutRequest struct {
+	Access  string `json:"access"`
+	Refresh string `json:"refresh"`
 }
