# back/auth/internal/ports/httpserver/router.go
@@ -2,9 +2,11 @@ package httpserver
 
 import (
 	"auth/internal/app"
+
 	"github.com/gin-gonic/gin"
 
 	_ "auth/docs"
+
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -13,5 +15,6 @@ func appRouter(r *gin.RouterGroup, a app.App) {
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	r.POST("refresh", refresh(a))
-	r.POST("authorize", authorize(a))
+	r.POST("login", login(a))
+	r.POST("logout", logout(a))
 }
